--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,33 @@
-FastAPI
-uvicorn
-motor
-twilio
-python-dotenv
+aiohappyeyeballs==2.5.0
+aiohttp==3.11.13
+aiohttp-retry==2.9.1
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.8.0
+attrs==25.1.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+dnspython==2.7.0
+fastapi==0.115.11
+frozenlist==1.5.0
+h11==0.14.0
+idna==3.10
+motor==3.7.0
+multidict==6.1.0
+propcache==0.3.0
+pydantic==2.10.6
+pydantic-core==2.27.2
+pyjwt==2.10.1
+pymongo==4.11.2
+python-dotenv==1.0.1
+python-multipart==0.0.20
+requests==2.32.3
+sniffio==1.3.1
+starlette==0.46.1
+twilio==9.4.6
+typing-extensions==4.12.2
+urllib3==2.3.0
+uvicorn==0.34.0
+yarl==1.18.3
