--- a/.env.example
+++ b/.env.example
@@ -27,4 +27,4 @@ BUSINESS_END_HOUR_SAT=14
 # Información de Contacto
 AGENCY_PHONE=(787) 555-0123
 AGENCY_EMAIL=contacto@toyota-sanjuan.com
-AGENCY_ADDRESS=Av. Roosevelt 1234, San Juan, Puerto Rico
+AGENCY_ADDRESS=Av. Roosevelt 1234, San Juan, Argentina
